@@ -60,6 +60,7 @@ public abstract class DirectoryFactory implements NamedListInitializedPlugin,
   public final static String LOCK_TYPE_NATIVE = "native";
   public final static String LOCK_TYPE_SINGLE = "single";
   public final static String LOCK_TYPE_NONE   = "none";
+  public final static String LOCK_TYPE_HDFS   = "hdfs";
   
   /**
    * Indicates a Directory will no longer be used, and when its ref count
